--- a/component.css
+++ b/component.css
@@ -49,13 +49,15 @@ body{
 
 .items .join-meetup{
 	font-size: 20px;
-	color: red;
 	padding: 15px 50px;
 	border-radius: 10px;
-	background-color: violet;
+	background-color: #e42d2d;
 	position: absolute;
 	left: 250px;
+}
 
+.join-meetup .join-meetup1{
+	color: #fff;
 }
 
 .intro1 {
@@ -117,8 +119,41 @@ a{
 h4{
 	color: black;
 	text-align: center;
+}
 
+.footer{
+	height: 700px;
+	background-color: #212121;
+}
+
+.footer .title{
+	height: 100px;
+	display: flex;
+	align-items: center;
+	text-decoration: underline;
+	border-bottom: 1px solid #867575;
+	font-size: 30px;
+}
+
+.title:hover{
+	text-decoration: none;
 }
 
 
+.row{
+	display: flex;
+	justify-content: center;
+}
 
+.footer .row1 li{
+	list-style: none;
+	margin: 40px;
+}
+
+.row1 .title-item{
+	color: #fff;
+}
+
+.row1 .sub-headline{
+	color: #bfbebe;
+}
